fix z-index problems

--- a/frontend/src/components/company/dashboard/components/Fleets.scss
+++ b/frontend/src/components/company/dashboard/components/Fleets.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
     padding: 1em;
     z-index: 100;
+    position: relative;
 }
 
 .company-home-wrapper {
